--- a/UnityProject/Delight/Assets/Delight/ChangeLog.txt
+++ b/UnityProject/Delight/Assets/Delight/ChangeLog.txt
@@ -1,7 +1,10 @@
 ﻿2020.2.0a
-- C# code can now be embedded in XML in bindings and actions through the '$' prefix, e.g. <Button IsVisible="$ {ClickCount} > 30" Click="$ GameManager.Start()" />
-- Missing value interpolators added
-- Fixed issue with code referencing a TMP examples class
+- Messaging system implemented and can be accessed through the Messenger class.
+- Inline code - C# code can now be embedded in XML in bindings and actions through the '$' prefix, e.g. 
+  <Button IsVisible="$ {ClickCount} > 30" Click="$ GameManager.Start()" />
+- Bugfix: Unnecessary "../" no longer added to xsi:schemaLocation path
+- Bugfix: Missing value interpolators added
+- Bugfix: Fixed issue with code referencing a TMP examples class
 
 2020.1.0
 - Delight Designer for LIVE editing of XML
