--- a/UnityProject/Delight/Assets/Delight/ChangeLog.txt
+++ b/UnityProject/Delight/Assets/Delight/ChangeLog.txt
@@ -1,7 +1,9 @@
 ﻿2020.2.0a
-- Messaging system implemented and can be accessed through the Messenger class.
+- Messaging system implemented and can be accessed through the Messenger class
 - Inline code - C# code can now be embedded in XML in bindings and actions through the '$' prefix, e.g. 
   <Button IsVisible="$ {ClickCount} > 30" Click="$ GameManager.Start()" />
+- Bugfix: Fixed issue where CanvasGroup was added to views even when canvas group values hasn't been set
+- Bugfix: Fixed issue with non-standalone builds due to module defines (e.g. DELIGHT_MODULE_TEXTMESHPRO) not being set on all platforms
 - Bugfix: Unnecessary "../" no longer added to xsi:schemaLocation path
 - Bugfix: Missing value interpolators added
 - Bugfix: Fixed issue with code referencing a TMP examples class
